[FSA-195] - Corrected colour contrast
[FSA-195] - Further colour adjustments

[FSA-195] - Reverting incorrect BG colour

[FSA-195] - Fixed home text link

[FSA-195] - Fixed colour for AAA links

[FSA-195] - Attempting to fix false AAA reporting

[FSA-195] - Hover state colours for AAA field_document

[FSA-195] - Link hover colour for field_docs (AAA)

[FSA-195] - Footer links colour contrast

--- a/docroot/themes/custom/fsa/src/component/content/content.css
+++ b/docroot/themes/custom/fsa/src/component/content/content.css
@@ -392,9 +392,9 @@ table {
         left: 0;
         top: 0.07em;
         border-radius: 50%;
-        background-color: var(--primary-color);
+        background-color: var(--color-dark-teal);
         transform: scale(0.3333);
-        box-shadow: inset 0 0 0 2px var(--primary-color);
+        box-shadow: inset 0 0 0 2px var(--color-dark-teal);
       }
     }
   }
@@ -989,7 +989,7 @@ but they are inserted in DOM outside container and with inline styles.
   @mixin responsive-declaration padding-right, 1.25em, 2em;
   @mixin responsive-declaration padding-left, 1.25em, 2em;
 
-  background-color: var(--color-lighter-gray);
+  background-color: transparent;
   padding-top: 1em;
   padding-bottom: 1em;
   border: 1px solid var(--color-light-gray);
@@ -1025,7 +1025,7 @@ but they are inserted in DOM outside container and with inline styles.
     padding: 0;
 
     :--not-touch &:--enter {
-      color: var(--primary-color);
+      color: var(--color-darkest-teal);
     }
   }
 
