--- a/docroot/themes/custom/fsa/src/helper/custom-property.css
+++ b/docroot/themes/custom/fsa/src/helper/custom-property.css
@@ -30,8 +30,9 @@ Plugin documentation:
   --color-light-gray: #dee2e5;
   --color-lightish-gray: #e8ebed;
   --color-lighter-gray: #f0f3f5;
+  --color-darkest-teal: #014b4c;
   --color-darker-teal: #005e59;
-  --color-dark-teal: #007c75;
+  --color-dark-teal: #00615b;
   --color-teal: #00938c;
   --color-light-teal: #00b2a9;
   --color-dark-purple: #2a0247;
